# AlphaAgent

./: .env.example  .gitignore  AGENTS.md  HANDOVER.md  README.md  alembic.ini  pyproject.toml
apps/api/: README.md
apps/qmt_gateway/: backends.py  main.py
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.js
data/: llm_runtime.json
docs/: deployment.md  phase2-implementation.md  qmt-integration.md  quant-trading-platform-design.md  quick-start.md  runbook.md
infra/grafana/: README.md  dashboard.json  prometheus.yml.example
infra/migrations/: README.md  env.py
infra/scripts/: backup.sh  export_datalake.py  restore.sh  smoke_test.py
libs/agents/: __init__.py  base_agent.py  market_scout.py  memory.py  orchestrator.py  portfolio_guardian.py  profit_maximizer.py  research_analyst.py  skills.py  skills_execution.py  skills_market.py  skills_news.py  skills_portfolio.py  skills_risk.py  skills_technical.py  super_analyst.py
libs/execution/: __init__.py  a_share_rules.py  order_manager.py
libs/features/: fundamental.py  market_state.py  technical.py
libs/infra/: cache.py  structured_logging.py
libs/llm_analyst/: __init__.py  agents.py  analyzer.py  decision.py  llm_client.py  orchestrator.py  runtime_config.py
libs/market_data/: __init__.py  cache.py  providers.py  quality.py  symbols.py  universe.py
libs/portfolio/: __init__.py  optimizer.py
libs/quant_core/: __init__.py  enums.py  models.py
libs/recommendations/: __init__.py  signal_engine.py  signal_validator.py
libs/research/: __init__.py  backtest.py  datalake.py  walk_forward.py
libs/risk/: engine.py
pipelines/: __init__.py
pipelines/backfill/: __init__.py  daily_bars.py
pipelines/intraday/: __init__.py  realtime_updater.py
pipelines/news/: __init__.py  collector.py
services/qmt-gateway/: README.md
tests/integration/: conftest.py  test_api.py  test_live_orders.py  test_live_orders_qmt_wiring.py  test_metrics_prom.py  test_notify_route.py  test_qmt_client.py  test_qmt_gateway.py
tests/regression/: test_backtest_baseline.py
tests/replay/: conftest.py  test_historical_replay.py
tests/unit/: conftest.py  test_a_share_rules.py  test_agents.py  test_auth.py  test_auto_signal_service.py  test_cache_layer.py  test_datalake.py  (+36 more)
(+118 files in other folders)
