[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-quant-platform"
version = "0.1.0"
description = "A-share intelligent quantitative trading platform scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.0,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  # HTTP client used by QMTClient (production code, not dev-only)
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
data = [
  "akshare>=1.17.00,<2.0",
]
db = [
  "alembic>=1.18,<2.0",
]
# Redis-backed KV cache (libs/infra/cache.py falls back to in-process if absent)
cache = [
  "redis>=5.0,<6.0",
]
# Research data lake: parquet export + DuckDB queries (libs/research/datalake.py)
research = [
  "pandas>=2.0,<3.0",
  "pyarrow>=16.0,<20.0",
  "duckdb>=0.10,<2.0",
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]
# Convenience meta-extra for a fully-featured install
full = [
  "akshare>=1.17.00,<2.0",
  "alembic>=1.18,<2.0",
  "redis>=5.0,<6.0",
  "pandas>=2.0,<3.0",
  "pyarrow>=16.0,<20.0",
  "duckdb>=0.10,<2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*"]
exclude = ["docs*", "infra*", "pipelines*", "services*", "tests*", "var*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "replay: historical replay tests (§10.5 of design doc)",
]
