[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-agent"
version = "2.0.0"
description = "AlphaAgent — 实时行情 + AI Agent分析 + 飞书提醒"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.0,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "akshare>=1.17.00,<2.0",
  "python-dotenv>=1.0,<2.0",
  "pandas>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*", "pipelines*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "replay: deterministic replay-style checks",
]
